--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -10,3 +10,45 @@ author_profile: true
 {% for post in site.teaching reversed %}
   {% include archive-single.html %}
 {% endfor %}
+
+
+
+# <center> Instructor  </center>
+- - -
+
+**Peer Influence and College Major Choices in Male-Dominated Fields** [*job market paper*] <br/>
+
+
+This paper investigates the effect of high school peers' choices on individuals' college major choices and explores whether the gender of the individuals and their peers is a relevant mediating factor on these effects. The empirical approach employs a regression discontinuity design, using student-level data from 2005 to 2019 from the centralized admission system of Chilean universities, where admission cutoffs are unpredictable and defined each year for each program-university combination. This paper analyzes peers exposed to different fields of study, such as comparing individuals whose peers were enrolled in male-dominated fields with a counterfactual option in a female-dominated one. The main finding shows a positive and significant impact of having a peer enrolled in a technology and engineering program on an applicant's enrollment and application to the same field only when the counterfactual alternative of the peers' admission is classified in the field of humanities, social sciences, and education. The results suggest substantial heterogeneity by gender. While male students exhibit a higher inclination towards technology and engineering fields when influenced by peers who have opted for male-dominated disciplines, female students are less likely to pursue that field when exposed to such peers.
+
+
+
+**Migration of High School Graduates: How Relevant are the Degree Type and Field of Study?**
+*(with Mary Arends-Kuenning, Sandy Dall'erba, William Ridley)*
+<br/>
+
+
+
+# <center> Instructor  </center>
+- - -
+
+University of Illinois at Urbana-Champaign
+
+    - Applied Statistics Lab using R, (Fall 2023)
+
+Universidad Adolfo Ibáñez, Business School, Chile
+
+    - Microeconomics (2016, 2017)
+    - Econometrics Laboratory (2017, 2018)
+    - Industrial Organization (2018)
+
+# <center> Teaching Assistant  </center>
+- - -
+
+University of Illinois at Urbana-Champaign
+    - Applied Statistical Methods and Data Analytics II (Fall 2022)
+    - Data Science for Applied Economics (Python) - Graduate Level (Spring 2021)
+    - Applied Statistical Methods (Fall 2020).
+
+Universidad Adolfo Ibáñez, Business School, Chile
+    - Statistics I, Statistics II (2012)
