--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -6,26 +6,26 @@ author_profile: true
 ---
 
 
-# <center> Instructor  </center>
-- - -
+Instructor
+======
 
 University of Illinois at Urbana-Champaign
+* Applied Statistics Lab using R, (Fall 2023)
 
-    - Applied Statistics Lab using R, (Fall 2023)
 
 Universidad Adolfo Ibáñez, Business School, Chile
+* Microeconomics (2016, 2017)
+* Econometrics Laboratory (2017, 2018)
+* Industrial Organization (2018)
 
-    - Microeconomics (2016, 2017)
-    - Econometrics Laboratory (2017, 2018)
-    - Industrial Organization (2018)
 
-# <center> Teaching Assistant  </center>
-- - -
+Teaching Assistant
+======  
 
 University of Illinois at Urbana-Champaign
-    - Applied Statistical Methods and Data Analytics II (Fall 2022)
-    - Data Science for Applied Economics (Python) - Graduate Level (Spring 2021)
-    - Applied Statistical Methods (Fall 2020).
+* Applied Statistical Methods and Data Analytics II (Fall 2022)
+* Data Science for Applied Economics (Python) - Graduate Level (Spring 2021)
+* Applied Statistical Methods (Fall 2020).
 
 Universidad Adolfo Ibáñez, Business School, Chile
-    - Statistics I, Statistics II (2012)
+* Statistics I, Statistics II (2012)
