--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -1,10 +1,10 @@
 ---
-layout: single
+layout: archive
 title: "Teaching"
 permalink: /teaching/
 author_profile: true
 ---
-
+{% include base_path %}
 
 Instructor
 ======
