--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -1,5 +1,5 @@
 ---
-layout: archive
+layout: single
 title: "Teaching"
 permalink: /teaching/
 author_profile: true
@@ -8,20 +8,16 @@ author_profile: true
 
 Instructor
 ======
-
 University of Illinois at Urbana-Champaign
 * Applied Statistics Lab using R, (Fall 2023)
-
 
 Universidad Adolfo Ibáñez, Business School, Chile
 * Microeconomics (2016, 2017)
 * Econometrics Laboratory (2017, 2018)
 * Industrial Organization (2018)
 
-
 Teaching Assistant
 ======  
-
 University of Illinois at Urbana-Champaign
 * Applied Statistical Methods and Data Analytics II (Fall 2022)
 * Data Science for Applied Economics (Python) - Graduate Level (Spring 2021)
