--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -6,22 +6,28 @@ author_profile: true
 ---
 {% include base_path %}
 
-Instructor
-======
-University of Illinois at Urbana-Champaign
-* Applied Statistics Lab using R, (Fall 2023)
+<h1>Instructor</h1>
+<h2>University of Illinois at Urbana-Champaign</h2>
+<ul>
+  <li>Applied Statistics Lab using R, (Fall 2023)</li>
+</ul>
 
-Universidad Adolfo Ibáñez, Business School, Chile
-* Microeconomics (2016, 2017)
-* Econometrics Laboratory (2017, 2018)
-* Industrial Organization (2018)
+<h2>Universidad Adolfo Ibáñez, Business School, Chile</h2>
+<ul>
+  <li>Microeconomics (2016, 2017)</li>
+  <li>Econometrics Laboratory (2017, 2018)</li>
+  <li>Industrial Organization (2018)</li>
+</ul>
 
-Teaching Assistant
-======  
-University of Illinois at Urbana-Champaign
-* Applied Statistical Methods and Data Analytics II (Fall 2022)
-* Data Science for Applied Economics (Python) - Graduate Level (Spring 2021)
-* Applied Statistical Methods (Fall 2020).
+<h1>Teaching Assistant</h1>
+<h2>University of Illinois at Urbana-Champaign</h2>
+<ul>
+  <li>Applied Statistical Methods and Data Analytics II (Fall 2022)</li>
+  <li>Data Science for Applied Economics (Python) - Graduate Level (Spring 2021)</li>
+  <li>Applied Statistical Methods (Fall 2020).</li>
+</ul>
 
-Universidad Adolfo Ibáñez, Business School, Chile
-* Statistics I, Statistics II (2012)
+<h2>Universidad Adolfo Ibáñez, Business School, Chile</h2>
+<ul>
+  <li>Statistics I, Statistics II (2012)</li>
+</ul>
